practice/4.secure-and-highlyavailable-apps/pdb/nginx/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: nginx.k8s.m<номер своего логина>.slurm.io
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
